model/it-tools/gitops-k8s-service-cluster-ip-it-tools.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
  - name: http
    targetPort: 80
    port: 80
